# future-ocr

./: .gitignore  CMakeLists.txt  FutureOCR.pro  README.md  aboutapp.cpp  capturescreen.cpp  capturescreen.h  customgraphicsview.cpp  customgraphicsview.h  customgraphicsview_copy.cpp  customgraphicsview_copy.h  globalsignals.cpp  globalsignals.h  imagetool.cpp  imagetool.h  logspace.cpp  logspace.h  main.cpp  mainwindow.cpp  mainwindow.h  ocrtexttask.cpp  ocrtexttask.h  paddleocrtask.cpp  paddleocrtask.h  pythonhandler.cpp  pythonhandler.h  pythonresource.cpp  pythonresource.h  pythreadstatelock.cpp  pythreadstatelock.h  resources.qrc  screencapture.cpp  screencapture.h  winhookwidget.cpp  winhookwidget.h
python/: paddleocrtask.py
